# archive.braun-odw.eu

./: .gitignore  Cargo.toml  README.md  netlify.toml  rust-toolchain
dns/: braun-odw.eu.zone
domains/: braun-odw.eu.toml
nodes/: NOTES.md  reineke-hardware.nix  reineke.nix
rust/dns/: Cargo.toml
rust/dns/src/: domain.rs  main.rs  secrets.rs
sites/: hanno.braun-odw.eu.html
sites/archive.braun-odw.eu/rust/: Cargo.toml
sites/archive.braun-odw.eu/rust/src/: main.rs
sites/archive.braun-odw.eu/static/colored-squares/: index.html
sites/archive.braun-odw.eu/static/flott/: index.html
sites/archive.braun-odw.eu/static/flott/contact/: index.html
sites/archive.braun-odw.eu/static/flott/news/: index.html
sites/archive.braun-odw.eu/static/flott/news/announcing-ramp-maker/: index.html
sites/archive.braun-odw.eu/static/flott/news/announcing-step-dir/: index.html
sites/archive.braun-odw.eu/static/ludus/: index.html
sites/archive.braun-odw.eu/static/missile-miner/: index.html
sites/archive.braun-odw.eu/static/orbital-invaders/: index.html
sites/archive.braun-odw.eu/static/tiny-world-war-multiplayer/: index.html
sites/hanno.braun-odw.eu/: index.html
sites/hanno.braun-odw.eu/html/: index.html
sites/hanno.braun-odw.eu/rust/: Cargo.toml
sites/hanno.braun-odw.eu/rust/src/: data.rs  main.rs  ongoing_work.rs  side_projects.rs  site_footer.rs  util.rs
sites/hanno.braun-odw.eu/rust/src/html/: mod.rs  ongoing_work.rs  side_projects.rs  site_footer.rs  util.rs  who.rs
sites/hanno.braun-odw.eu/sass/: style.scss
sites/hanno.braun-odw.eu/static/: index.css
sites/html/hanno.braun-odw.eu/: index.html
sites/static/hanno.braun-odw.eu/: index.css  index.html
sites/well-known/rust/: Cargo.toml
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
tools/dns/: Cargo.toml
tools/dns/src/: api.rs  domain.rs  main.rs  secrets.rs  util.rs
tools/domains/: Cargo.toml
tools/domains/src/: api.rs  domain.rs  main.rs  secrets.rs
tools/nodes/: Cargo.toml  Dockerfile
tools/nodes/docker/: Dockerfile
tools/nodes/src/: main.rs  secrets.rs
tools/sites/: Cargo.toml
tools/sites/src/: args.rs  build.rs  main.rs  serve.rs
tools/ssg/: Cargo.toml
tools/ssg-derive/: Cargo.toml
tools/ssg-derive/src/: input.rs  lib.rs  output.rs
tools/ssg-derive/src/input/: mod.rs  ty.rs
tools/ssg-derive/src/output/: field.rs  mod.rs
tools/ssg/src/: args.rs  lib.rs  markdown.rs  serve.rs
tools/ssg/src/html/: front_builder.rs  front_macro.rs  mod.rs  model.rs  syntax.rs
tools/util/: Cargo.toml
tools/util/src/: docker.rs  lib.rs  secrets.rs  toml.rs
(+8 files in other folders)
