[package]
name    = "domains"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
publish = false


[dependencies]
anyhow  = "*"
toml    = "*"

[dependencies.reqwest]
version  = "*"
features = ["blocking"]

[dependencies.serde]
version  = "*"
features = ["derive"]
