[package]
name    = "sites"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
anyhow        = "*"
async-walkdir = "*"
clap          = "3.0.0-beta.2"
futures       = "*"
notify        = "*"
warp          = "*"

[dependencies.tokio]
version  = "*"
features = ["full"]
