[package]
name    = "sites"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-odw.eu>"]
edition = "2018"


[dependencies]
anyhow             = "*"
async-walkdir      = "*"
clap               = "3.0.0-beta.2"
futures            = "*"
html5ever          = "*"
kuchiki            = "*"
notify             = "5.0.0-pre.8"
rsass              = "*"
thiserror          = "*"
tracing            = "*"
tracing-subscriber = "*"
warp               = "*"

[dependencies.tokio]
version  = "*"
features = ["full"]
