[package]
name    = "ssg"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-odw.eu>"]
edition = "2018"


[dependencies]
anyhow        = "*"
async-walkdir = "*"
clap          = "3.0.0-beta.2"
futures       = "*"
notify        = "5.0.0-pre.8"
rsass         = "*"
thiserror     = "*"
tracing       = "*"
warp          = "*"

[dependencies.ssg-derive]
path = "../ssg-derive"

[dependencies.tokio]
version  = "*"
features = ["full"]
