[workspace]

[package]
name    = "site"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-odw.eu>"]
edition = "2018"
publish = false


[dependencies]
anyhow             = "*"
tracing-subscriber = "*"

[dependencies.ssg]
path = "../../../tools/ssg"

[dependencies.tokio]
version  = "*"
features = ["full"]
